# openacctests

./: CMakeLists.txt
accMalloc/: CMakeLists.txt  accMalloc.cpp
apply/: CMakeLists.txt  apply.cpp
collectiveShared/: CMakeLists.txt  README_atomicSync.md  atomicSync.cpp  atomicSyncOpenMP.cpp  collectiveShared.cpp  collectiveSharedMiniAlpaka.cpp  nestedType.cpp
hostClass/: CMakeLists.txt  classWithArray.cpp  hostClass.cpp
include/: apply.h  meta.h
lambda/: CMakeLists.txt  lambda.cpp  passObject.cpp
loop/: CMakeLists.txt  loop.cpp
placementNew/: CMakeLists.txt  placementNew.cpp
sharedMem/: CMakeLists.txt  sharedMem.cpp
workerLoop/: CMakeLists.txt
